--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ table {
 body {
     width: 60%;
     margin: 0 auto;
-    background-color: #7c7c7c;
+    background-color: #595959;
 }
 
 /************
