--- a/src/index.css
+++ b/src/index.css
@@ -55,9 +55,9 @@ table {
  ***GLOBAL***
  ************/
 body {
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
-    background-color: #595959;
+    background-color: #bfbfbf;
 }
 
 /************
