changed background and layout

--- a/src/index.css
+++ b/src/index.css
@@ -56,8 +56,7 @@ table {
  ************/
 body {
     width: 100%;
-    margin: 0 auto;
-    background-color: #bfbfbf;
+    background-image: url("./images/matrix-cyber-security.jpg")
 }
 
 /************
