--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
  ***RESET***
  ***********/
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -16,8 +16,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -28,7 +28,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -54,11 +54,21 @@ table {
 /************
  ***GLOBAL***
  ************/
-body {
+/* body {
     width: 100%;
     background-image: url("./images/matrix-cyber-security.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+} */
+body{
+	background-color: black;
+}
+
+a {
+	text-decoration: none;
+	color: white;
+	font-size: 20px;
+    font-family: 'Special Elite', cursive;
 }
 
 /************
